adaptive form, add and adaptive footer

--- a/#sourse/footer.html
+++ b/#sourse/footer.html
@@ -1,7 +1,101 @@
 <footer class="footer">
   <div class="_container">
     <div class="footer__body">
-      
+      <div class="footer__content">
+        <div class="footer__content-column">
+          <article class="footer__item one">
+            <div class="footer__item-top">
+              <button class="footer__title">Пункт</button>
+              <div class="_icon-Vector"></div>
+            </div>
+            <div class="footer__item-content">
+              <div class="footer__text">
+                <p>
+                  В своём стремлении улучшить пользовательский опыт мы упускаем, что многие известные личности.
+                </p>
+                <p>Пункт</p>
+                <p>Пункт</p>
+              </div>
+            </div>
+          </article>
+          <article class="footer__item">
+            <div class="footer__item-top">
+              <button class="footer__title">Пункт</button>
+              <div class="_icon-Vector"></div>
+            </div>
+            <div class="footer__item-content">
+              <div class="footer__text">
+                <p>
+                  В своём стремлении улучшить пользовательский опыт мы упускаем, что многие известные личности.
+                </p>
+                <p>Пункт</p>
+                <p>Пункт</p>
+              </div>
+            </div>
+          </article>
+        </div>
+        <div class="footer__content-column">
+          <article class="footer__item">
+            <div class="footer__item-top">
+              <button class="footer__title">Пункт</button>
+              <div class="_icon-Vector"></div>
+            </div>
+            <div class="footer__item-content">
+              <div class="footer__text">
+                <p>
+                  В своём стремлении улучшить пользовательский опыт мы упускаем, что многие известные личности.
+                </p>
+                <p>Пункт</p>
+                <p>Пункт</p>
+              </div>
+            </div>
+          </article>
+          <article class="footer__item">
+            <div class="footer__item-top">
+              <button class="footer__title">Контакты</button>
+                <div class="_icon-Vector"></div>
+            </div>
+            <div class="footer__item-content">
+              <div class="footer__text">
+                <a class="footer__link" href="#">
+                  <div class="_icon-phone footer__link-icon"></div>
+                  +380 555 555 555
+                </a>
+                <a class="footer__link" href="#">
+                  <div class="_icon-email footer__link-icon"></div>
+                  email@gmail.com
+                </a>
+                <a class="footer__link" href="#">
+                  <div class="_icon-location footer__link-icon"></div>
+                  г. Киев
+                </a>
+              </div>
+            </div>
+          </article>
+        </div>
+      </div>
+      <div class="footer__bottom">
+        <a href="#" class="footer__logo logo">
+          <img class="logo-text" src="img/logo-text-white.png" alt="logo text" >
+        </a>
+        <div class="social">
+          <a href="#" class="social__link">
+            <div class="_icon-tg social__item"></div>
+          </a>
+          <a href="#" class="social__link">
+            <div class="_icon-vk social__item"></div>
+          </a>
+          <a href="#" class="social__link">
+            <div class="_icon-insta social__item"></div>
+          </a>
+          <a href="#" class="social__link">
+            <div class="_icon-email social__item"></div>
+          </a>
+          <a href="#" class="social__link">
+            <div class="_icon-phone social__item"></div>
+          </a>
+        </div>
+      </div>
     </div>
   </div>
 </footer>
