--- a/#sourse/header.html
+++ b/#sourse/header.html
@@ -24,26 +24,26 @@
         </div>
         <ul class='menu__list'>
           <li class="menu__item">
-            <a href="#" class="menu__link">Главная</a>
+            <a href="#mainpage" class="menu__link">Главная</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__link">О компании</a>
+            <a href="#about" class="menu__link">О компании</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__link">Портфолио</a>
+            <a href="#portfolio" class="menu__link">Портфолио</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__link">Что мы предлагаем</a>
+            <a href="#service" class="menu__link">Что мы предлагаем</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__link">Специальное предложение</a>
+            <a href="#offer" class="menu__link">Специальное предложение</a>
           </li>
         </ul>
         <div class="menu__btn">
-          <button class="button button--blue">
+          <a href="#offer" class="btn-offer button button--blue">
             Оставить заявку
             <div class="_icon-Vector"></div>
-          </button>
+          </a>
         </div>
         <div class="social">
           <a href="#" class="social__link">
