--- a/#sourse/footer.html
+++ b/#sourse/footer.html
@@ -5,31 +5,31 @@
         <div class="footer__content-column">
           <article class="footer__item one">
             <div class="footer__item-top">
-              <button class="footer__title">Пункт</button>
+              <button class="footer__title">Paragraph</button>
               <div class="_icon-Vector"></div>
             </div>
             <div class="footer__item-content">
               <div class="footer__text">
                 <p>
-                  В своём стремлении улучшить пользовательский опыт мы упускаем, что многие известные личности.
+                  In our quest to improve the user experience, we are missing out on many well-known personalities.
                 </p>
-                <p>Пункт</p>
-                <p>Пункт</p>
+                <p>Paragraph</p>
+                <p>Paragraph</p>
               </div>
             </div>
           </article>
           <article class="footer__item">
             <div class="footer__item-top">
-              <button class="footer__title">Пункт</button>
+              <button class="footer__title">Paragraph</button>
               <div class="_icon-Vector"></div>
             </div>
             <div class="footer__item-content">
               <div class="footer__text">
                 <p>
-                  В своём стремлении улучшить пользовательский опыт мы упускаем, что многие известные личности.
+                  In our quest to improve the user experience, we are missing out on many well-known personalities.
                 </p>
-                <p>Пункт</p>
-                <p>Пункт</p>
+                <p>Paragraph</p>
+                <p>Paragraph</p>
               </div>
             </div>
           </article>
@@ -37,29 +37,29 @@
         <div class="footer__content-column">
           <article class="footer__item">
             <div class="footer__item-top">
-              <button class="footer__title">Пункт</button>
+              <button class="footer__title">Paragraph</button>
               <div class="_icon-Vector"></div>
             </div>
             <div class="footer__item-content">
               <div class="footer__text">
                 <p>
-                  В своём стремлении улучшить пользовательский опыт мы упускаем, что многие известные личности.
+                  In our quest to improve the user experience, we are missing out on many well-known personalities.
                 </p>
-                <p>Пункт</p>
-                <p>Пункт</p>
+                <p>Paragraph</p>
+                <p>Paragraph</p>
               </div>
             </div>
           </article>
           <article class="footer__item">
             <div class="footer__item-top">
-              <button class="footer__title">Контакты</button>
+              <button class="footer__title">Contacts</button>
                 <div class="_icon-Vector"></div>
             </div>
             <div class="footer__item-content">
               <div class="footer__text">
                 <a class="footer__link" href="#">
                   <div class="_icon-phone footer__link-icon"></div>
-                  +380 555 555 555
+                  +7 777 777 777
                 </a>
                 <a class="footer__link" href="#">
                   <div class="_icon-email footer__link-icon"></div>
@@ -67,7 +67,7 @@
                 </a>
                 <a class="footer__link" href="#">
                   <div class="_icon-location footer__link-icon"></div>
-                  г. Киев
+                  c. Nur-Sultan
                 </a>
               </div>
             </div>
