--- a/#sourse/header.html
+++ b/#sourse/header.html
@@ -24,24 +24,24 @@
         </div>
         <ul class='menu__list'>
           <li class="menu__item">
-            <a href="#mainpage" class="menu__link">Главная</a>
+            <a href="#mainpage" class="menu__link">Home</a>
           </li>
           <li class="menu__item">
-            <a href="#about" class="menu__link">О компании</a>
+            <a href="#about" class="menu__link">About company</a>
           </li>
           <li class="menu__item">
-            <a href="#portfolio" class="menu__link">Портфолио</a>
+            <a href="#portfolio" class="menu__link">Portfolio</a>
           </li>
           <li class="menu__item">
-            <a href="#service" class="menu__link">Что мы предлагаем</a>
+            <a href="#service" class="menu__link">What do we offer</a>
           </li>
           <li class="menu__item">
-            <a href="#offer" class="menu__link">Специальное предложение</a>
+            <a href="#offer" class="menu__link">Special offer</a>
           </li>
         </ul>
         <div class="menu__btn">
           <a href="#offer" class="btn-offer button button--blue">
-            Оставить заявку
+            Submit your application
             <div class="_icon-Vector"></div>
           </a>
         </div>
